--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,25 +1,122 @@
-.navbar ul{
-    list-style-type: none;
-    padding: 0px;
-    margin: 10px 30px;
-    overflow: hidden;
+body{
+    margin: 0;
+    padding: 0;
 }
 
-.navbar a{
-    color: black;
-    text-decoration: none;
-    padding: 15px;
-    display: block;
-    text-align: center;
-    font-size: 30px;
-}
-
-.navbar a:hover{
-    color: red;
-}
-.navbar li{
-    float: right;
-}
-.bakgrunn{
+.menu ul{
+    position: fixed;
+    display: flex;
     width: 100%;
+    height: 55px;
+    line-height: 55px;
+    background: rgba(0, 0, 0, 0.5);
+    list-style-type: none;
+    margin: 15px auto;
+}
+
+.menu ul li{
+    width: 100%;
+}
+
+.menu ul li a{
+    position: relative;
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-size: 22px;
+    color: white;
+    text-decoration: none;
+}
+
+.menu ul li a::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 6px;
+    background: rgb(255, 255, 255);
+    transition: all 2s;
+}
+
+.menu ul li a:hover::before{
+    width: 100%;
+    transition: all 2s;
+}
+
+.section1{
+    min-height: 850px;
+    background-image: url(car.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.section2{
+    background-color: antiquewhite;
+    color: black;
+    padding: 55px;
+    font-family: sans-serif;
+    font-size: 20px;
+    text-align: center;
+    line-height: 1.3;
+
+}
+
+.section3{
+    min-height: 550px;
+    background-image: url(bond.jpeg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.section4{
+    background-color: antiquewhite;
+    color: black;
+    padding: 55px;
+    font-family: sans-serif;
+    font-size: 20px;
+    text-align: center;
+    line-height: 1.3;
+    
+}
+header{
+    box-sizing: border-box;
+    min-height: 100vh;
+    padding: 30vw 0 5vw;
+    position: relative;
+    transform-style: inherit;
+    width: 100vw;
+}
+header h1 {
+    margin-top: -100px;
+}
+header, header:before{
+    background: 50% 50% / cover;
+}
+header::before{
+    bottom: 0;
+    content: "";
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: block;
+    background-image: url(car.jpg);
+    background-size: cover;
+    transform-origin: center center 0;
+    transform: translateZ(-1px) scale(2);
+    z-index: -1;
+    min-height: 100vh;
+}
+
+header * { 
+    font-weight: normal;
+    letter-spacing: 0.2em;
+    text-align: center;
+    margin: 0;
+    padding: 1em 0;
 }
