--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,60 +1,47 @@
 body{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
-
-.menu ul{
-    position: fixed;
-    display: flex;
-    width: 100%;
-    height: 55px;
-    line-height: 55px;
-    background: rgba(0, 0, 0, 0.5);
-    list-style-type: none;
-    margin: 15px auto;
-}
-
-.menu ul li{
-    width: 100%;
-}
-
-.menu ul li a{
-    position: relative;
-    display: block;
-    width: 100%;
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
     text-align: center;
-    font-size: 22px;
-    color: white;
+    padding: 14px 16px;
     text-decoration: none;
-}
-
-.menu ul li a::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0%;
-    height: 6px;
-    background: rgb(255, 255, 255);
-    transition: all 2s;
-}
-
-.menu ul li a:hover::before{
-    width: 100%;
-    transition: all 2s;
-}
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
 
 .section1{
-    min-height: 850px;
-    background-image: url(car.jpg);
+    min-height: 550px;
+    background-image: url(circle.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    overflow-y: hidden;
 }
 
 .section2{
-    background-color: antiquewhite;
+    background-color: rgb(255, 255, 255);
     color: black;
     padding: 55px;
     font-family: sans-serif;
@@ -83,34 +70,18 @@ body{
     line-height: 1.3;
     
 }
+
 header{
+    font-size: 20px;
     box-sizing: border-box;
     min-height: 100vh;
     padding: 30vw 0 5vw;
     position: relative;
     transform-style: inherit;
-    width: 100vw;
+    
 }
 header h1 {
-    margin-top: -100px;
-}
-header, header:before{
-    background: 50% 50% / cover;
-}
-header::before{
-    bottom: 0;
-    content: "";
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    display: block;
-    background-image: url(car.jpg);
-    background-size: cover;
-    transform-origin: center center 0;
-    transform: translateZ(-1px) scale(2);
-    z-index: -1;
-    min-height: 100vh;
+    margin-top: -150px;
 }
 
 header * { 
